<resources>
    <string name="app_name">iBeet</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid name</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="ibeet">iBeet</string>
    <string name="off_to_a_better_start">Off to a better start</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email_address">Email address</string>
    <string name="iconimage">iconImage</string>
    <string name="food">Food</string>
    <string name="welcome_to_icare">Welcome to iCare \nDebug page!</string>
    <string name="register_here">Register here</string>
    <string name="or">OR</string>
    <string name="register">Register</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_age">Enter age</string>
    <string name="enter_weight">Enter weight</string>
    <string name="enter_name">Enter name</string>
    <string name="already_have_an_account_login_here">Already have an account? Login here</string>
    <string name="map">Map</string>
    <string name="where_am_i">Where am I?</string>
    <string name="save">Save</string>
    <string name="new_meal">New Meal</string>

    <!-- THESE ARE FOR FOOD_PAGE MESSAGES -->
    <string name="cal_day">Your calories today: </string>
    <string name="cal_week">Your calories this week: </string>

    <string name="cal_day_comp_neutral">You have reached your daily recommended calories! </string>
    <string name="cal_day_comp_low">You are just behind your daily recommended calories: </string>
    <string name="cal_day_comp_verylow">You are well behind your daily recommended calories: </string>
    <string name="cal_day_comp_high">You are a bit over your daily recommended calories: </string>
    <string name="cal_day_comp_veryhigh">You are way over your daily recommended calories: </string>

    <string name="cal_week_comp_neutral">Your last weeks calorie balance looks good!</string>
    <string name="cal_week_comp_low">You are a bit behind in your weekly calories balance: </string>
    <string name="cal_week_comp_verylow">You are way behind your weekly calories balance: </string>
    <string name="cal_week_comp_high">You are going a bit over your weekly calories balance: </string>
    <string name="cal_week_comp_veryhigh">You are way over your weekly calories balance: </string>
    <string name="cal_week_comp_exception">No weekly comparison due to account being less than week old</string>

    <string name="dietreco_neutral">You are doing well with your dietary balance!</string>
    <string name="dietreco_null">Just eat something and we will work from there</string>
    <string name="dietreco_highcarb">You might want to lessen your carbohydrate intake</string>
    <string name="dietreco_highfat">You might want to limit your fats intake</string>
    <string name="dietreco_highprot">You might want to lessen your protein intake</string>

    <string name="dietreco_lowcarb">\n and eat more carbohydrates</string>
    <string name="dietreco_lowfat">\n and eat some fats</string>
    <string name="dietreco_lowprot">\n and eat more protein</string>
    <!-- END OF FOODPAGE -->


    <string name="enter_username">Enter username</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="username">Username</string>
    <string name="age">Age</string>
    <string name="logout">Logout</string>
    <string name="user_name">User name</string>
    <string name="profilepicture">profilepicture</string>
    <string name="your_calories_today">Your Calories Today</string>
    <string name="i_eat_ass">I Eat Ass</string>
    <string name="beeb_boob">BEEB BOOB</string>
    <string name="skibidi">SKIBIDI</string>
    <string name="your_nplatesize">Your Platesize</string>
    <string name="plate_ratio">Plate Ratio</string>
    <string name="carbs">Carbs</string>
    <string name="meat">Meat</string>
    <string name="vegetables">Vegetables</string>
    <string name="your_calories_this_week">Your calories this week:</string>
    <string name="todo">TODO</string>
    <string name="average_speed_this_session">Average Speed This Session:</string>
    <string name="distance_travelled_this_session">Distance Travelled This Session:</string>
    <string name="distance_travelled_all_time">Distance Travelled All Time:</string>
    <string name="average_speed_last_session">Average Speed Last Session:</string>
    <string name="textview">TextView</string>
    <string name="level">Level:</string>
    <string name="profile">Profile</string>
    <string name="i_eat_food">I eat food</string>

</resources>
